--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rest-countries</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h2>Reat countries!!!</h2>
-    <div id="country" class="country">
+    <div id="country" class="countries">
 
     </div>
 
